--- a/SPMS/Areas/Admin/Views/Manage/CreateStudents.cshtml
+++ b/SPMS/Areas/Admin/Views/Manage/CreateStudents.cshtml
@@ -29,7 +29,7 @@
 					<div class="form-file">
 						<input type="file" name="File" accept=".csv" class="form-file-input form-control">
 					</div>
-					<button type="submit" class="btn btn-primary btn-sm">Upload</button>
+					<button type="submit" onclick="showPreloader()" class="btn btn-primary btn-sm">Upload</button>
 				</div>
 			</div>
 		</form>
