--- a/SPMS/Areas/Graduate/Views/Dashboard/Profile.cshtml
+++ b/SPMS/Areas/Graduate/Views/Dashboard/Profile.cshtml
@@ -203,15 +203,9 @@
                                                     <div class="row">
                                                         <div class="mb-3 col-md-6">
                                                             <label class="form-label">Department</label>
-                                                            @if (ViewBag.myDepartments != null)
-                                                            {
-                                                                <select asp-for="@student.DepartmentId" name="DepartmentId" class="form-control  default-select wide" id="departmentId" asp-items="@(new SelectList(ViewBag.myDepartments,"DepartmentId","Name"))" required>
-                                                                    @if(student.SupervisorId != null)
-                                                                    {
-                                                                        <option value=""> @student.Department.Name</option>
-                                                                    }
-                                                                </select>
-                                                            }
+
+                                                            <select name="DepartmentId" class="form-control default-select wide" id="departmentId" asp-items="@(new SelectList(ViewBag.myDepartments,"DepartmentId","Name",0))" required>
+                                                            </select>
                                                         </div>
                                                         <div class="mb-3 col-md-6">
                                                             <label class="form-label">Supervisor</label>
