--- a/SPMS/Views/Shared/_NoticePartial.cshtml
+++ b/SPMS/Views/Shared/_NoticePartial.cshtml
@@ -15,7 +15,7 @@
 @if (CurrentStudent.Supervisor == null)
 {
 
-	<div id="myModal" class="modal fade">
+	<div id="myModal" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="myModal" aria-hidden="true">
 		<div class="modal-dialog">
 			<div class="modal-content">
 				<div class="modal-header text-center"> 
